# snin-v5-mesh-fabric

./: .agents_registry.json  .cheque_key  .env.example  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  HABR_ARTICLE.txt  LAYER8_SPEC_v2.2.md  LICENSE  MORPHO_ANALYSIS.md  Makefile  NIP_SNIN.md  PHASE22_REPORT.md  README.md  REFACTOR_PLAN.md  REPO_RULES.md  SNIN_ARCHITECTURE.md  SNIN_SPEC.md  SPEC_NEW_LAYERS.md  TRANSPORT_STANDARDS.md  _final_bench.py  ack_tracker.py  agent_cron.py  agent_daemon.py  agent_gossip.py  agent_registry.py  agents.json  alert_config.yaml  alert_engine.py  anti_ddos.py  anti_ddos_daemon.py  app.py  auto_recovery.py  benchmark_mesh.py  benchmark_sustained.py  blinded_sigs.py  buffer_zone.json  capabilities.json  (+148 more)
_archive/: PID_SNAPSHOT_20260603_043143.txt  identity_api.py  sr_master_v2.py  sr_master_v3.py  sr_master_v51.py
benchmarks/: benchmark_sustained_v2.py  content_bench.py
dashboard/: graph_api.py  graphify_index.html  index.html
docs/: 19_SNIN_14TH_PASS_RELAY_REVIVAL.md  20_SNIN_AGENT_MARKETPLACE_ARCHITECTURE.md  21_SNIN_COMPETITIVE_CODE_ANALYSIS.md  22_SNIN_CLIENT_PHASE1.md  23_SNIN_CLIENT_PHASE2.md  24_SNIN_CLIENT_PHASE3.md  25_SNIN_CLIENT_PHASE4.md  26_TIE_BRIDGE_FIX.md  ARCHITECTURE.md  INFRASTRUCTURE_SNAPSHOT_2026-06-14.md  L13_HEALTH_MONITOR.md  L14_ALERT_ENGINE.md  L15_AUTO_RECOVERY.md  L5T_DLQ.md  README.md  RUNBOOK.md  api_server_relay_dash.py  init.sh  redis-production.conf
experimental/: udp_tracker.py
firmware/: sensor_kitchen_config.json
identities/: analyst_ai.json  anton_ai.json  aporialab.json  archivist_ai.json  attestations.json  axiom.json  creator.json  cryptoantology.json  cryter.json  director_ai.json  executor_ai.json  forecaster_ai.json  marketing_ai.json  rd_ai.json  security_ai.json  strategist_ai.json  support_ai.json  v2bot_agent.json
modules/: external_sync.py  snin_app.js  snin_app.py  snin_index.html  snin_style.css  start_external_sync.sh
registry/: mesh_04a558f0e13c53b9.json  mesh_10ce08b45e118561.json  (+29 more)
(+137 files in other folders)
