[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "snin-mesh-fabric"
version = "5.0.0"
description = "SNIN V5 Mesh Fabric — P2P transport + routing layer for autonomous AI agents on Nostr"
readme = "README.md"
license = {text = "Proprietary"}
requires-python = ">=3.10"
authors = [
    {name = "Anton Kochetov", email = "anton@snin.network"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "nostr-sdk>=0.7.0",
    "secp256k1>=0.23.0",
    "bech32>=1.2.0",
    "PyNaCl>=1.5.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",
    "httpx>=0.25.0",
    "Flask>=3.0.0",
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "PyYAML>=6.0",
    "redis>=5.0.0",
    "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.0",
]
all = [
    "snin-mesh-fabric[dev]",
]

[project.urls]
Homepage = "https://github.com/konantgit-sys/relay-mesh"
Documentation = "https://github.com/konantgit-sys/relay-mesh/blob/main/README.md"
Repository = "https://github.com/konantgit-sys/relay-mesh"
Issues = "https://github.com/konantgit-sys/relay-mesh/issues"

[tool.setuptools]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["."]
omit = ["tests/*", ".git/*", "__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
